--- a/css/style.css
+++ b/css/style.css
@@ -244,3 +244,56 @@ section {
 .servicio a {
     text-decoration: none;
 }
+
+/* BARRA DATOS */
+#barra {
+    background: linear-gradient(rgba(19, 138, 185, 0.85), rgba(7, 142, 160, 0.85)), url(../img/bg_banner1.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#barra p {
+    color: #fff;
+}
+
+#barra h1 {
+    color: #fff;
+    font-size: 60px;
+}
+
+/* FOOTER */
+footer {
+    background: linear-gradient(0deg, rgba(8, 32, 50, 0.9), rgba(8, 32, 50, 0.9)), url(../img/bg_banner1.jpg), #082032;
+    ;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+footer .footer-top {
+    padding-top: 80px;
+    padding-bottom: 40px;
+}
+
+.footer-bottom {
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+footer .navbar-brand {
+    color: #fff;
+}
+
+footer p {
+    color: #ADB3B9;
+}
+
+footer .social-icons a {
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
