--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ section {
 .top-nav {
     background-color: #00a3fe;
     color: #fff;
-    padding: 10px;
+    padding: 2px;
 }
 
 .top-nav p {
@@ -68,8 +68,8 @@ section {
 }
 
 .social-icons a {
-    width: 32px;
-    height: 32px;
+    width: 28px;
+    height: 28px;
     display: inline-flex;
     color: #fff;
     background-color: rgba(255, 255, 255, 0.25);
@@ -77,7 +77,7 @@ section {
     align-items: center;
     justify-content: center;
     border-radius: 100px;
-    font-size: 25px;
+    font-size: 22px;
 }
 
 .social-icons a:hover {
@@ -99,7 +99,7 @@ section {
 
 .navbar-brand {
     font-size: 17px;
-    font-weight: 700;
+    font-weight: 600;
 }
 
 
@@ -238,7 +238,8 @@ section {
 }
 
 .servicio img {
-    width: 90px;
+    width: 120px;
+    border-radius: 100px;
 }
 
 .servicio a {
