--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@
     --shadow: 0px 6px 30px rgba(0, 0, 0, 0.08);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     font-family: "Montserrat", sans-serif;
@@ -21,9 +26,9 @@ h1, h2, h3, h4, h5, h6,
     color: var(--dark);
 }
 
-img {
+/* img {
     width: 100%;
-}
+} */
 
 .bg-cover {
     background-size: cover !important;
@@ -88,7 +93,7 @@ section {
 .navbar .navbar-nav .nav-link {
     text-transform: uppercase;
     font-size: 14px;
-    font-weight: 550;
+    font-weight: 510;
     color: var(--dark);
 }
 
@@ -220,6 +225,10 @@ section {
 
 }
 
+.fb-page {
+    margin-left: 40px !important;
+}
+
 .info-box img {
     width: 90px;
 }
@@ -265,7 +274,7 @@ section {
 
 /* FOOTER */
 footer {
-    background: linear-gradient(0deg, rgba(8, 32, 50, 0.9), rgba(8, 32, 50, 0.9)), url(../img/bg_banner1.jpg), #082032;
+    background: linear-gradient(0deg, rgba(8, 32, 50, 0.9), rgba(8, 32, 50, 0.9)), url(../img/lagopuelo1.jpeg), #082032;
     ;
     background-size: cover;
     background-position: center;
@@ -297,4 +306,127 @@ footer .social-icons a {
     font-size: 20px;
     margin-left: 4px;
     margin-right: 4px;
+}
+
+/* AUTORIDADES */
+.intro {
+    margin-bottom: 36px;
+    text-align: center;
+}
+
+.intro p {
+    max-width: 500px;
+}
+
+.intro h6 {
+    color: var(--brand);
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.intro h1 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.autoridades-member {
+    text-align: center;
+}
+
+.autoridades-member .image {
+    position: relative;
+    z-index: 2;
+    overflow: hidden;
+}
+
+.autoridades-member .overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: -10%;
+    background-color: rgba(61, 169, 252, 0.603);
+    opacity: 0;
+    transition: all 0.4s ease;
+}
+
+.autoridades-member h5 {
+    margin-top: 16px;
+    margin-bottom: 4px;
+}
+
+.autoridades-member .social-icons {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    opacity: 0;
+    transition: all 0.4s ease;
+}
+
+.autoridades-member .social-icons a {
+    width: 40px;
+    height: 40px;
+}
+
+.autoridades-member:hover .social-icons {
+    top: 50%;
+    opacity: 1;
+}
+
+.autoridades-member:hover .overlay {
+    top: 0%;
+    opacity: 1;
+}
+
+/* APP */
+.download-area {
+    overflow: hidden;
+}
+
+.download-area .download-image .download-shape-1 {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    background-color: #b3d7ff;
+    border-radius: 50%;
+    z-index: -1;
+}
+
+.download-area .download-image .image-3 {
+    position: relative;
+    max-width: 350px;
+    padding-top: 65px;
+    padding-left: 60px;
+    padding-bottom: 60px;
+}
+
+.download-content ul {
+    margin-top: 35px;
+    margin-left: 50px !important
+}
+
+.download-content ul li {
+    display: inline-block;
+    margin-top: 15px;
+}
+
+.download-content ul li a {
+    width: 210px;
+    height: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    box-shadow: -15px 10px 30px 0 rgb(0 0 0 / 30%);
+}
+
+.download-content ul li a.app-store {
+    margin-right: 28px;
+    background-color: #0898e7;
+}
+
+.download-content ul li a.play-store {
+    background-color: #525a63;
 }
